  * Fixed problem with copying stacks with nameddo blocks.
  * Fixed problem with copying stacks with namedbox blocks.
  * Added no background block for SVG output (useful for icons, et al.).
  * Added hollow-line rendering.
  * Added disabled protoblock attritribute.
  * Added onload, onstart, onstop support to plugins.
  * Added hollow-line rendering for arcs.

TODO:
  * Browser for plugins
  * Save errors
  * Save to javascript
  * RTL support
  * Make expand an array, one element for each arg or slot
  * User-defined block types
  * Artwork beautification?
  * Try to detect difference between unknown flow and arg blocks
  * What palette/block features from the Python version do we need to port?
  * Do we need to add support for plugins init, quit, etc.?
  * Better interoperability with Python version
  * Sugar datastore/toolbar support
  * Unit tests
  * Make error messages extendable with plugins.

FEATURE IDEAS:
  * Local variables? (e.g., boxes only defined inside an action?) Note that
    we can use turtlename to create instance variables.
  * Pass argments to actions? (and arg blocks to reference them)?
  * Arrays
  * Color mixer that outputs a stack: set hue; set value; set chroma.

ISSUES:
  * Find a scalable approach to drawing on the canvas

KNOWN BUGS:
  * Not all blocks highlight when using step-by-step mode.
  * Sometimes returning to backgrounded project results in empty project.
  * Loading macros there is a funny collapsed state sometimes.
  * Somehow we end up in a browser resize loop??? (2842 console messages are
    not shown js/activity.js:770)
  * Python show block not compatible with JS show block.
  * Not serious, but there is still a race condition when creating
    if-then-else blocks (so there is a work-around in place).
  * Sometimes clamp block highlight scale is too large.
  * Sometimes docking position is not scaled properly when dragging block
    after block resize.
  * Second vspace block is not positioned properly.