@@ -9,10 +9,10 @@
 // along with this library; if not, write to the Free Software
 // Foundation, 51 Franklin Street, Suite 500 Boston, MA 02110-1335 USA
 
-var UTILITYBOX = '<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="360" height="133" id="svg2"> <rect width="360" height="133" x="0" y="0" id="rect4" style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none" /> <g transform="translate(306.943,-1.053)" id="g6" style="fill:#000000;display:block"> <path d="m 27.557,5.053 c -12.43,0 -22.5,10.076 -22.5,22.497 0,12.432 10.07,22.503 22.5,22.503 12.431,0 22.5,-10.071 22.5,-22.503 0,-12.421 -10.07,-22.497 -22.5,-22.497 z m 10.199,28.159 c 1.254,1.256 1.257,3.291 0,4.545 -0.628,0.629 -1.451,0.943 -2.274,0.943 -0.822,0 -1.644,-0.314 -2.27,-0.94 l -5.76,-5.761 -5.76,5.761 c -0.627,0.626 -1.449,0.94 -2.271,0.94 -0.823,0 -1.647,-0.314 -2.275,-0.943 -1.254,-1.254 -1.254,-3.289 0.004,-4.545 l 5.758,-5.758 -5.758,-5.758 c -1.258,-1.254 -1.258,-3.292 -0.004,-4.546 1.255,-1.254 3.292,-1.259 4.546,0 l 5.76,5.759 5.76,-5.759 c 1.252,-1.259 3.288,-1.254 4.544,0 1.257,1.254 1.254,3.292 0,4.546 l -5.758,5.758 5.758,5.758 z" id="path8" style="fill:#000000;display:inline" /> </g> <rect width="354" height="75" x="3" y="55" id="rect10" style="fill:#96d3f3;fill-opacity:1;stroke:none" /> <g id="g4145"> <g transform="translate(79.5482,78.41)" id="g7" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <g id="g9" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <path d="m 25.263,12.435 h 24.656 v 3.562 H 39.575 V 41.59 H 35.606 V 15.996 H 25.263 v -3.561 z" id="path11" style="fill:#000000;stroke:#000000;stroke-opacity:1" /> </g> </g> <g transform="translate(71.548,78.41)" id="g13" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <g id="g15" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <path d="m 13.953,24.435 h 16.656 v 3.562 H 24.265 V 41.59 H 20.296 V 27.997 h -6.344 v -3.562 z" id="path17" style="fill:#000000;stroke:#000000;stroke-opacity:1" /> </g> </g> <path d="m 105.561,102.08776 6,-5.999998 -4,0" id="path3618" style="fill:none;stroke:#000000;stroke-width:1.5;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> <g id="g4129"> <g transform="matrix(-1,0,0,1,60.419,78.41)" id="g7-6" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <g id="g9-1" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <path d="m 25.263,12.435 h 24.656 v 3.562 H 39.575 V 41.59 H 35.606 V 15.996 H 25.263 v -3.561 z" id="path11-3" style="fill:#000000;stroke:#000000;stroke-opacity:1" /> </g> </g> <g transform="matrix(-1,0,0,1,68.4192,78.41)" id="g13-4" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <g id="g15-1" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <path d="m 13.953,24.435 h 16.656 v 3.562 H 24.265 V 41.59 H 20.296 V 27.997 h -6.344 v -3.562 z" id="path17-6" style="fill:#000000;stroke:#000000;stroke-opacity:1" /> </g> </g> <path d="m 28.4062,96.087762 6,5.999998 -4,0" id="path3618-6" style="fill:none;stroke:#000000;stroke-width:1.5;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> <g transform="translate(233,67)" id="g3248" style="fill:none;stroke:#000000;stroke-opacity:1"> <g transform="matrix(0.55205508,0,0,0.55205508,44.618464,18.235971)" id="g4382" style="fill:none;stroke:#000000;stroke-opacity:1"> <g transform="translate(-80.093659,12.220029)" id="g4308" style="fill:none;stroke:#000000;stroke-opacity:1"> <g id="g4310" style="fill:none;stroke:#000000;stroke-opacity:1">  <path  d="m 6.736,49.002 h 24.52 c 2.225,0 3.439,-1.447 3.439,-3.441 v -27.28 c 0,-1.73 -1.732,-3.441 -3.439,-3.441 h -4.389"  id="path4312"  style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> </g> </g> <g transform="translate(-80.093659,12.220029)" id="g4314" style="fill:none;stroke:#000000;stroke-opacity:1"> <g id="g4316" style="fill:none;stroke:#000000;stroke-opacity:1">  <path  d="m 26.867,38.592 c 0,1.836 -1.345,3.201 -3.441,4.047 L 6.736,49.002 V 14.84 l 16.69,-8.599 c 2.228,-0.394 3.441,0.84 3.441,2.834 v 29.517 z"  id="path4318"  style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> </g> </g> <path d="m -70.669659,54.827029 c 0,0 -1.351,-0.543 -2.702,-0.543 -1.351,0 -2.703,0.543 -2.703,0.543" id="path4320" style="fill:none;stroke:#000000;stroke-width:2.25;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> <path d="m -70.669659,44.226029 c 0,0 -1.239,-0.543 -2.815,-0.543 -1.577,0 -2.59,0.543 -2.59,0.543" id="path4322" style="fill:none;stroke:#000000;stroke-width:2.25;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> <path d="m -70.669659,33.898029 c 0,0 -1.125,-0.544 -2.927,-0.544 -1.802,0 -2.478,0.544 -2.478,0.544" id="path4324" style="fill:none;stroke:#000000;stroke-width:2.25;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> <line id="line4326" y2="23.725029" y1="58.753029" x2="-66.884659" x1="-66.884659" style="fill:none;stroke:#000000;stroke-width:2.25;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> </g> <g transform="matrix(0,-1,-1,0,43.9376,89.386573)" id="g4770" style="fill:none;stroke:#000000;stroke-opacity:1"> <g transform="translate(34.0803,-1006.42)" id="g4772" style="fill:none;stroke:#000000;stroke-opacity:1"> <polyline id="polyline4774" points="51.562,15.306 41.17,16.188 42.053,5.794" style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" transform="matrix(-0.469241,0.469241,-0.469241,-0.469241,66.2906,1019.03)" /> <path d="m 39.363241,1033.1291 -0.05636,9.9115 -8.750608,0.067" id="path4776" style="fill:none;stroke:#000000;stroke-width:2.5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> </g> <path d="m 23.54634,18.388888 0,-4.444445 a 4.444445,4.444445 0 0 1 4.444445,-4.4444453 l 4.444446,0 0,2.2222233 11.11111,0 0,-2.2222233 4.444448,0 a 4.444445,4.444445 0 0 1 4.44444,4.4444453 l 0,4.444445 0,4.444445 a 4.444445,4.444445 0 0 1 -4.44444,4.444445 l -4.444448,0 -1.111113,0 0,2.222223 -8.888887,0 0,-2.222223 -1.11111,0 -4.444446,0 A 4.444445,4.444445 0 0 1 23.54634,22.833333 l 0,-4.444445 z" id="path2882" style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:square;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> <g transform="translate(213.88348,76.415962)" id="activity-browse" style="display:block"> <g transform="translate(-128.87712,-22.838983)" id="g7-0" style="display:inline"> <g transform="matrix(0.10822504,0,0,0.09945444,61.358446,34.085169)" id="g6167"> <g transform="translate(2.7213003,-2.9469823)" id="g3798"> <rect width="81.443176" height="272.19876" rx="4.3524833" ry="6.0284276" x="373.97116" y="55.900478" id="rect2987" style="color:#000000" /> <rect width="81.443077" height="360.47952" rx="4.3524833" ry="6.0284276" x="499.32275" y="-32.380226" id="rect3757" style="color:#000000" /> <rect width="81.443077" height="500.25723" rx="4.3524833" ry="6.0284276" x="248.61969" y="-172.15802" id="rect3759" style="color:#000000" /> <rect width="81.443314" height="215.79736" rx="4.3524833" ry="6.0284276" x="123.26795" y="112.30204" id="rect3761" style="color:#000000" /> </g> </g> </g> </g> </svg>'
+var UTILITYBOX = '<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="360" height="133"> <rect width="360" height="133" x="0" y="0" style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none" /> <g transform="translate(306.943,-1.053)" style="fill:#000000;display:block"> <path d="m 27.557,5.053 c -12.43,0 -22.5,10.076 -22.5,22.497 0,12.432 10.07,22.503 22.5,22.503 12.431,0 22.5,-10.071 22.5,-22.503 0,-12.421 -10.07,-22.497 -22.5,-22.497 z m 10.199,28.159 c 1.254,1.256 1.257,3.291 0,4.545 -0.628,0.629 -1.451,0.943 -2.274,0.943 -0.822,0 -1.644,-0.314 -2.27,-0.94 l -5.76,-5.761 -5.76,5.761 c -0.627,0.626 -1.449,0.94 -2.271,0.94 -0.823,0 -1.647,-0.314 -2.275,-0.943 -1.254,-1.254 -1.254,-3.289 0.004,-4.545 l 5.758,-5.758 -5.758,-5.758 c -1.258,-1.254 -1.258,-3.292 -0.004,-4.546 1.255,-1.254 3.292,-1.259 4.546,0 l 5.76,5.759 5.76,-5.759 c 1.252,-1.259 3.288,-1.254 4.544,0 1.257,1.254 1.254,3.292 0,4.546 l -5.758,5.758 5.758,5.758 z" style="fill:#000000;display:inline" /> </g> <rect width="354" height="75" x="3" y="55" style="fill:#96d3f3;fill-opacity:1;stroke:none" /> <g id="g4145"> <g transform="translate(79.5482,78.41)" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <g style="fill:#000000;stroke:#000000;stroke-opacity:1"> <path d="m 25.263,12.435 h 24.656 v 3.562 H 39.575 V 41.59 H 35.606 V 15.996 H 25.263 v -3.561 z" style="fill:#000000;stroke:#000000;stroke-opacity:1" /> </g> </g> <g transform="translate(71.548,78.41)" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <g style="fill:#000000;stroke:#000000;stroke-opacity:1"> <path d="m 13.953,24.435 h 16.656 v 3.562 H 24.265 V 41.59 H 20.296 V 27.997 h -6.344 v -3.562 z" style="fill:#000000;stroke:#000000;stroke-opacity:1" /> </g> </g> <path d="m 105.561,102.08776 6,-5.999998 -4,0" style="fill:none;stroke:#000000;stroke-width:1.5;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> <g> <g transform="matrix(-1,0,0,1,60.419,78.41)" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <g style="fill:#000000;stroke:#000000;stroke-opacity:1"> <path d="m 25.263,12.435 h 24.656 v 3.562 H 39.575 V 41.59 H 35.606 V 15.996 H 25.263 v -3.561 z" style="fill:#000000;stroke:#000000;stroke-opacity:1" /> </g> </g> <g transform="matrix(-1,0,0,1,68.4192,78.41)" style="fill:#000000;stroke:#000000;stroke-opacity:1"> <g style="fill:#000000;stroke:#000000;stroke-opacity:1"> <path d="m 13.953,24.435 h 16.656 v 3.562 H 24.265 V 41.59 H 20.296 V 27.997 h -6.344 v -3.562 z" style="fill:#000000;stroke:#000000;stroke-opacity:1" /> </g> </g> <path d="m 28.4062,96.087762 6,5.999998 -4,0" style="fill:none;stroke:#000000;stroke-width:1.5;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> <g> <g transform="matrix(0.55205508,0,0,0.55205508,277.61846,85.235971)" style="fill:none;stroke:#000000;stroke-opacity:1"> <g transform="translate(-80.093659,12.220029)" style="fill:none;stroke:#000000;stroke-opacity:1"> <g style="fill:none;stroke:#000000;stroke-opacity:1">  <path  d="m 6.736,49.002 h 24.52 c 2.225,0 3.439,-1.447 3.439,-3.441 v -27.28 c 0,-1.73 -1.732,-3.441 -3.439,-3.441 h -4.389"  style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> </g> </g> <g transform="translate(-80.093659,12.220029)" style="fill:none;stroke:#000000;stroke-opacity:1"> <g style="fill:none;stroke:#000000;stroke-opacity:1">  <path  d="m 26.867,38.592 c 0,1.836 -1.345,3.201 -3.441,4.047 L 6.736,49.002 V 14.84 l 16.69,-8.599 c 2.228,-0.394 3.441,0.84 3.441,2.834 v 29.517 z"  style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> </g> </g> <path d="m -70.669659,54.827029 c 0,0 -1.351,-0.543 -2.702,-0.543 -1.351,0 -2.703,0.543 -2.703,0.543" style="fill:none;stroke:#000000;stroke-width:2.25;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> <path d="m -70.669659,44.226029 c 0,0 -1.239,-0.543 -2.815,-0.543 -1.577,0 -2.59,0.543 -2.59,0.543" style="fill:none;stroke:#000000;stroke-width:2.25;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> <path d="m -70.669659,33.898029 c 0,0 -1.125,-0.544 -2.927,-0.544 -1.802,0 -2.478,0.544 -2.478,0.544" style="fill:none;stroke:#000000;stroke-width:2.25;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> <line y2="23.725029" y1="58.753029" x2="-66.884659" x1="-66.884659" style="fill:none;stroke:#000000;stroke-width:2.25;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" /> </g> <g transform="matrix(0,-1,-1,0,276.9376,156.38657)" style="fill:none;stroke:#000000;stroke-opacity:1"> <g transform="translate(34.0803,-1006.42)" style="fill:none;stroke:#000000;stroke-opacity:1"> <polyline points="51.562,15.306 41.17,16.188 42.053,5.794" style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" transform="matrix(-0.469241,0.469241,-0.469241,-0.469241,66.2906,1019.03)" /> <path d="m 39.363241,1033.1291 -0.05636,9.9115 -8.750608,0.067" style="fill:none;stroke:#000000;stroke-width:2.5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> </g> <path d="m 256.54634,85.388888 0,-4.444445 a 4.444445,4.444445 0 0 1 4.44445,-4.444445 l 4.44444,0 0,2.222223 11.11111,0 0,-2.222223 4.44445,0 a 4.444445,4.444445 0 0 1 4.44444,4.444445 l 0,4.444445 0,4.444445 a 4.444445,4.444445 0 0 1 -4.44444,4.444445 l -4.44445,0 -1.11111,0 0,2.222223 -8.88889,0 0,-2.222223 -1.11111,0 -4.44444,0 a 4.444445,4.444445 0 0 1 -4.44445,-4.444445 l 0,-4.444445 z" style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:square;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> <g transform="translate(213.88348,76.415962)" style="display:block"> <g transform="translate(-128.87712,-22.838983)" style="display:inline"> <g transform="matrix(0.10822504,0,0,0.09945444,61.358446,34.085169)"> <g transform="translate(2.7213003,-2.9469823)">  <rect  width="81.443176"  height="272.19876"  rx="4.3524833"  ry="6.0284276"  x="373.97116"  y="55.900478"  style="color:#000000" />  <rect  width="81.443077"  height="360.47952"  rx="4.3524833"  ry="6.0284276"  x="499.32275"  y="-32.380226"  style="color:#000000" />  <rect  width="81.443077"  height="500.25723"  rx="4.3524833"  ry="6.0284276"  x="248.61969"  y="-172.15802"  style="color:#000000" />  <rect  width="81.443314"  height="215.79736"  rx="4.3524833"  ry="6.0284276"  x="123.26795"  y="112.30204"  style="color:#000000" /> </g> </g> </g> </g> <g transform="translate(300,67)"> <path d="m 9.4052198,28.47892 0,-4.444445 A 4.444445,4.444445 0 0 1 13.84967,19.59003 l 4.44444,0 0,2.222223 11.11111,0 0,-2.222223 4.44445,0 a 4.444445,4.444445 0 0 1 4.44444,4.444445 l 0,4.444445 0,4.444446 a 4.444445,4.444445 0 0 1 -4.44444,4.44444 l -4.44445,0 -1.11111,0 0,2.22223 -8.88889,0 0,-2.22223 -1.11111,0 -4.44444,0 a 4.444445,4.444445 0 0 1 -4.4444502,-4.44444 l 0,-4.444446 z" style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:square;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> <g transform="matrix(-1,0,0,1,97.306074,-14.8706)" style="fill:none;stroke:#000000;stroke-opacity:1"> <g transform="translate(34.0803,-1006.42)" style="fill:none;stroke:#000000;stroke-opacity:1"> <polyline points="51.562,15.306 41.17,16.188 42.053,5.794" style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" transform="matrix(-0.469241,0.469241,-0.469241,-0.469241,66.2906,1019.03)" /> <path d="m 39.363241,1033.1291 -0.05636,9.9115" style="fill:none;stroke:#000000;stroke-width:2.5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> </g> <g transform="matrix(1,0,0,-1,-49.606744,76.171266)" style="fill:none;stroke:#000000;stroke-opacity:1"> <g transform="translate(34.0803,-1006.42)" style="fill:none;stroke:#000000;stroke-opacity:1"> <polyline points="51.562,15.306 41.17,16.188 42.053,5.794" style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" transform="matrix(-0.469241,0.469241,-0.469241,-0.469241,66.2906,1019.03)" /> <path d="m 39.363241,1033.1291 -0.05636,9.9115" style="fill:none;stroke:#000000;stroke-width:2.5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> </g> <g transform="matrix(0,-1,1,0,-23.17127,103.04644)" style="fill:none;stroke:#000000;stroke-opacity:1"> <g transform="translate(34.0803,-1006.42)" style="fill:none;stroke:#000000;stroke-opacity:1"> <polyline points="51.562,15.306 41.17,16.188 42.053,5.794" style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" transform="matrix(-0.469241,0.469241,-0.469241,-0.469241,66.2906,1019.03)" /> <path d="m 39.363241,1033.1291 -0.05636,9.9115" style="fill:none;stroke:#000000;stroke-width:2.5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> </g> <g transform="matrix(0,-1,-1,0,70.8706,103.04644)" style="fill:none;stroke:#000000;stroke-opacity:1"> <g transform="translate(34.0803,-1006.42)" style="fill:none;stroke:#000000;stroke-opacity:1"> <polyline points="51.562,15.306 41.17,16.188 42.053,5.794" style="fill:none;stroke:#000000;stroke-width:3.5;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1" transform="matrix(-0.469241,0.469241,-0.469241,-0.469241,66.2906,1019.03)" /> <path d="m 39.363241,1033.1291 -0.05636,9.9115" style="fill:none;stroke:#000000;stroke-width:2.5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" /> </g> </g> </g> </svg>';
 
 // A pop up for utility functions, e.g., loading plugins, changing block size
-function UtilityBox(canvas, stage, refreshCanvas, bigger, smaller, plugins, stats) {
+function UtilityBox(canvas, stage, refreshCanvas, bigger, smaller, plugins, stats, scroller) {
     this.canvas = canvas;
     this.stage = stage;
     this.refreshCanvas = refreshCanvas;
@@ -20,6 +20,7 @@ function UtilityBox(canvas, stage, refreshCanvas, bigger, smaller, plugins, stat
     this.doSmaller = smaller;
     this.doPlugins = plugins;
     this.doStats = stats;
+    this.doScroller = scroller;
     this.container = null;
     this.save = null;
     this.close = null;
@@ -91,8 +92,11 @@ function loadUtilityContainerHandler(box) {
         } else if (x < 225) {
             box.doStats();
             box.hide();
-        } else {
+        } else if (x < 300) {
 	    box.doPlugins();
+            box.hide();
+        } else {
+	    box.doScroller();
             box.hide();
         }
     });
