@@ -3249,8 +3249,11 @@ heading = כיוון (אזימוט)
 set-xy = XY קבע ערך
 x = x
 y = y
+set-color = קבע צבע
+set-hue = קבע צבע
 set-shade = קבע גוון
 set-grey = קבע אפור
+color = צבע
 shade = גוון
 grey = אפור
 set-pen-size = קבע עובי עט
@@ -3476,10 +3479,6 @@ On-my-device = במכשיר שלי
 Open = פתיחה
 Delete = מחיקה
 Worldwide = בעולם כולו
-Open = פתיחה
-Delete = מחיקה
-Publish = פרסום
-Download = הורדה
 confirm = אישור
 one-of = אחד מ
 this = זה
